crates/px4/tests/trybuild/fail/too_many_args.rs
use px4::{Args, main};

#[main]
fn entry(_a: Args, _b: u32) {}

fn main() {}
